--- a/.github/workflows/provision-release-environment.yml
+++ b/.github/workflows/provision-release-environment.yml
@@ -5,48 +5,53 @@
 # core_image_tag: OpenCRVS core image tag
 # Country config will be provisioned from latest commit to release branch
 name: Release - Provision Environment
-run-name: "Provision ${{ inputs.environment }} release environment (core: ${{ inputs.core_image_tag }})"
+run-name: "Provision ${{ github.ref_name }} release environment (core: ${{ inputs.core_image_tag }})"
 on:
     workflow_dispatch:
         inputs:
-            environment:
-                description: "Environment, e/g v19 will create v19.opencrvs.dev"
-                required: true
             core_image_tag:
                 description: "Core image tag"
                 required: true
                 type: string
 
 jobs:
+    get-environment:
+      runs-on: ubuntu-24.04
+      outputs:
+        environment: ${{ steps.set_environment.outputs.environment }}
+      steps:
+      - name: Set environment name
+        id: set_environment
+        # Convert branch name to environment name
+        # e.g. release-v1.2.3 -> v1-2-3,
+        #      1.2.3 -> v1-2-3
+        run: |
+          environment=$(echo ${{ github.ref_name }} | sed -e 's/\./-/g' -e 's/release\-v//g')
+          echo "environment=v${environment}" >> $GITHUB_OUTPUT
     verify-branch:
-      environment: ${{ inputs.environment }}
+      needs: get-environment
+      environment: ${{ needs.get-environment.outputs.environment }}
       runs-on: ubuntu-24.04
       steps:
       - name: Fail if not on release branch
         run: |
           echo "Current ref name: ${{ github.ref_name }} and ref: ${{ github.ref }}"
-          if [[ "${{ github.ref }}" != refs/heads/release/* ]] && [[ "${{ github.ref }}" != refs/heads/ocrvs-9393-uber-pipeline ]]
+          if [[ "${{ github.ref }}" != refs/heads/release/* ]]
           then
               echo "❌ This workflow must be run from a release/* branch."
               echo "Please check release documentation for more information: TODO: Add link to documentation"
-              exit 1
+              exit 0
           fi
     create-server:
-      needs: verify-branch
+      needs: [verify-branch, get-environment]
       uses: ./.github/workflows/create-hetzner-server.yml
       with:
-        environment: ${{ inputs.environment }}
-      secrets: inherit
-    provision-server:
-      needs: [verify-branch, create-server]
-      uses: ./.github/workflows/provision.yml
-      with:
-        environment: ${{ inputs.environment }}
+        environment: ${{ needs.get-environment.outputs.environment }}
       secrets: inherit
     check-countryconfig:
       runs-on: ubuntu-24.04
-      needs: [verify-branch, create-server]
-      environment: ${{ inputs.environment }}
+      needs: [verify-branch, create-server, get-environment]
+      environment: ${{ needs.get-environment.outputs.environment }}
       outputs:
         image_tag: ${{ steps.get_latest_commit.outputs.config_tag }}
       steps:
@@ -60,11 +65,17 @@ jobs:
               config_tag=$(git rev-parse HEAD | cut -c 1-7)
               echo "Latest commit SHA: $config_tag"
               echo "config_tag=$config_tag" >> $GITHUB_OUTPUT
+    provision-server:
+      needs: [verify-branch, create-server, check-countryconfig, get-environment]
+      uses: ./.github/workflows/provision.yml
+      with:
+        environment: ${{ needs.get-environment.outputs.environment }}
+      secrets: inherit
     deploy:
-      needs: [verify-branch, provision-server, check-countryconfig, create-server]
+      needs: [verify-branch, provision-server, check-countryconfig, create-server, get-environment]
       uses: ./.github/workflows/deploy.yml
       with:
-        environment: ${{ inputs.environment }}
+        environment: ${{ needs.get-environment.outputs.environment }}
         core-image-tag: ${{ inputs.core_image_tag }}
         countryconfig-image-tag: ${{ needs.check-countryconfig.outputs.image_tag }}
         reset: 'true'
