--- a/infrastructure/docker-compose.deploy.yml
+++ b/infrastructure/docker-compose.deploy.yml
@@ -60,7 +60,7 @@ services:
       - overlay_net
 
   filebeat:
-    image: docker.elastic.co/beats/filebeat:8.16.4
+    image: ghcr.io/opencrvs/filebeat:8.16.4
     user: root
     networks:
       - overlay_net
@@ -85,7 +85,7 @@ services:
         - 'traefik.enable=false'
 
   metricbeat:
-    image: docker.elastic.co/beats/metricbeat:8.16.4
+    image: ghcr.io/opencrvs/metricbeat:8.16.4
     user: root
     cap_add:
       - SYS_PTRACE
@@ -156,7 +156,7 @@ services:
         gelf-address: 'udp://127.0.0.1:12201'
         tag: 'setup-kibana-config'
   kibana:
-    image: docker.elastic.co/kibana/kibana:8.16.4
+    image: ghcr.io/opencrvs/kibana:8.16.4
     restart: always
     deploy:
       labels:
@@ -270,6 +270,7 @@ services:
         tag: 'redis'
   # Configure elasticsearch
   elasticsearch:
+    image: ghcr.io/opencrvs/elasticsearch:8.16.4
     volumes:
       - '/data/elasticsearch:/usr/share/elasticsearch/data'
       - '/data/backups/elasticsearch:/data/backups/elasticsearch'
@@ -440,7 +441,7 @@ services:
         - 'traefik.enable=false'
       replicas: 1
   apm-server:
-    image: docker.elastic.co/apm/apm-server:7.17.22
+    image: ghcr.io/opencrvs/apm-server:7.17.22
     cap_add: ['CHOWN', 'DAC_OVERRIDE', 'SETGID', 'SETUID']
     cap_drop: ['ALL']
     restart: always
