--- a/.github/workflows/deploy-and-e2e.yml
+++ b/.github/workflows/deploy-and-e2e.yml
@@ -106,9 +106,9 @@ jobs:
         id: check-specs
         run: |
           if ls ./e2e/testcases/${{ matrix.test_dir }}/*.spec.ts > /dev/null 2>&1; then
-            echo "::set-output name=has_spec_files::true"
+            echo "has_spec_files=true" >> GITHUB_OUTPUT
           else
-            echo "::set-output name=has_spec_files::false"
+            echo "has_spec_files=false" >> GITHUB_OUTPUT
           fi
 
       - name: Cache Node.js dependencies
@@ -159,7 +159,7 @@ jobs:
           previous_conclusion=$(gh run list --limit 1 --status=completed --workflow="Deploy & run E2E" --json conclusion -q '.[0].conclusion')
           echo "PREVIOUS_CONCLUSION=$previous_conclusion" >> $GITHUB_ENV
         env:
-          GH_TOKEN: ${{ secrets.GH_TOKEN }}
+          GITHUB_TOKEN: ${{ github.token }}
 
       - name: Set Output Based on Conclusion
         id: set-output
