--- a/.github/workflows/trigger-e2e-environment.yml
+++ b/.github/workflows/trigger-e2e-environment.yml
@@ -31,7 +31,7 @@ jobs:
 
       - name: Get PR Information (when manually triggered)
         env:
-          GH_TOKEN: ${{ github.token }}
+          GITHUB_TOKEN: ${{ github.token }}
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
           PR_NUMBER=${{ github.event.inputs.pr_number }}
@@ -69,7 +69,7 @@ jobs:
         id: dispatch_e2e
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GH_TOKEN }}
+          github-token: ${{ secrets.E2E_WORKFLOWS_TOKEN }}
           script: |
             function slugify(str) {
               return str
@@ -115,7 +115,7 @@ jobs:
       - name: Wait for Environment Deployment (Deploy Job)
         uses: actions/github-script@v7
         with:
-          github-token: ${{ secrets.GH_TOKEN }}
+          github-token: ${{ secrets.E2E_WORKFLOWS_TOKEN }}
           script: |
             const owner = 'opencrvs';
             const repo = 'e2e';
@@ -131,8 +131,7 @@ jobs:
                 .replace(/-+/g, '-')
                 .substr(0, 35);
             }
-            const branchName = slugify('${{ env.BRANCH_NAME }}');
-            const deployMessage = `Your environment is deployed to https://${branchName}.opencrvs.dev.`;
+
 
             let deployJobCompleted = false;
 
@@ -159,6 +158,15 @@ jobs:
                 await new Promise(resolve => setTimeout(resolve, 10000));
               }
             }
+
+      - name: Update github comment on PR
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.FARAJALAND_ISSUES_PR_TOKEN }}
+          script: |
+            const branchName = slugify('${{ env.BRANCH_NAME }}');
+            const deployMessage = `Your environment is deployed to https://${branchName}.opencrvs.dev.`;
+            const prNumber = ${{ needs.generate_stack_name_and_branch.outputs.pr_number }};
 
             // Check if the comment already exists
             const comments = await github.rest.issues.listComments({
