--- a/.github/workflows/trigger-e2e-environment.yml
+++ b/.github/workflows/trigger-e2e-environment.yml
@@ -34,12 +34,13 @@ jobs:
           GITHUB_TOKEN: ${{ github.token }}
         if: ${{ github.event_name == 'workflow_dispatch' }}
         run: |
-          PR_NUMBER=${{ github.event.inputs.pr_number }}
+          PR_NUMBER=${{ inputs.pr_number }}
           PR_DATA=$(gh pr view $PR_NUMBER --json headRefName,headRefOid)
           BRANCH_NAME=$(echo "$PR_DATA" | jq -r '.headRefName')
           HEAD_COMMIT_HASH=$(echo "$PR_DATA" | jq -r '.headRefOid' | cut -c1-7)
           echo "BRANCH_NAME=${BRANCH_NAME}" >> $GITHUB_ENV
           echo "HEAD_COMMIT_HASH=${HEAD_COMMIT_HASH}" >> $GITHUB_ENV
+          echo "PR_NUMBER: $PR_NUMBER"
 
       - name: Get Branch Name and Head Commit Hash (on PR creation)
         if: ${{ github.event_name != 'workflow_dispatch' }}
