--- a/.github/workflows/trigger-e2e-environment.yml
+++ b/.github/workflows/trigger-e2e-environment.yml
@@ -40,7 +40,7 @@ jobs:
           HEAD_COMMIT_HASH=$(echo "$PR_DATA" | jq -r '.headRefOid' | cut -c1-7)
           echo "BRANCH_NAME=${BRANCH_NAME}" >> $GITHUB_ENV
           echo "HEAD_COMMIT_HASH=${HEAD_COMMIT_HASH}" >> $GITHUB_ENV
-          echo "PR_NUMBER: $PR_NUMBER"
+          echo "PR_NUMBER: "
 
       - name: Get Branch Name and Head Commit Hash (on PR creation)
         if: ${{ github.event_name != 'workflow_dispatch' }}
@@ -154,6 +154,36 @@ jobs:
               if (!deployJobCompleted) {
                 await new Promise(resolve => setTimeout(resolve, 10000));
               }
+            }
+
+      - name: Update github comment on PR
+        uses: actions/github-script@v7
+        with:
+          github-token: ${{ secrets.FARAJALAND_ISSUES_PR_TOKEN }}
+          script: |
+            const branchName = '${{ steps.slugify_bname.outputs.stack }}';
+            const deployMessage = `Your environment is deployed to https://${branchName}.opencrvs.dev.`;
+            const prNumber = ${{ github.event.pull_request.number }};
+
+            // Check if the comment already exists
+            const comments = await github.rest.issues.listComments({
+              owner: 'opencrvs',
+              repo: 'opencrvs-farajaland',
+              issue_number: prNumber
+            });
+
+            const existingComment = comments.data.find(comment => comment.body.includes(deployMessage));
+            if (!existingComment) {
+              // Add PR comment if it doesn't exist
+              await github.rest.issues.createComment({
+                owner: 'opencrvs',
+                repo: 'opencrvs-farajaland',
+                issue_number: prNumber,
+                body: deployMessage
+              });
+              console.log('PR comment added');
+            } else {
+              console.log('PR comment already exists, skipping...');
             }
 
       - name: Wait for E2E Workflow Completion
